--- a/css/Estiloend.css
+++ b/css/Estiloend.css
@@ -175,6 +175,40 @@ header nav a.activo{
 	width: 100%;
 	vertical-align: top;
 }
+
+
+/* FOOTER STYLE */
+footer {
+    background-color: #000000;
+    text-align: center;
+    padding: 20px;
+}
+
+.footer-content {
+    color: #ffffff;
+    font-family: 'Arial', sans-serif;
+}
+
+.footer-content p {
+    font-size: 18px;
+}
+
+.footer-content ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-content li {
+    font-size: 14px;
+}
+
+.footer-content ul li a {
+    color: #ffffff; /* Cambia el color de los iconos a blanco */
+    font-size: 15px; /* Ajusta el tamaño de los íconos */
+    margin-right: 10px;
+	margin-top: 120px; /* Añade un margen derecho para separar los iconos */
+}
+
 /* ---- ----- ----- Media Queries ----- ----- ----- */
 @media screen and (max-width: 800px) {
 	header .logo {
