--- a/css/Estiloend.css
+++ b/css/Estiloend.css
@@ -208,6 +208,11 @@ footer {
     margin-right: 10px;	
 }
 
+/*CAMBIO PEQUEÑIN*/
+.dropdown-content a:hover{
+	color: rgb(188, 25, 25);
+}
+
 /* ---- ----- ----- Media Queries ----- ----- ----- */
 @media screen and (max-width: 800px) {
 	header .logo {
